<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llOnLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Баланс: "
                android:id="@+id/tvBalance"
                android:layout_marginLeft="5dp"
                android:textColor="#ff99cc00" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAvtopilot"
                android:id="@+id/tvPilot"
                android:textColor="#ffcc0000"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NET"
                android:id="@+id/tvNET"
                android:textColor="#ffcc0000"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/tvGPS"
                android:layout_toStartOf="@+id/tvGPS"
                android:layout_marginRight="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvGPS"
                android:id="@+id/tvGPS"
                android:textColor="#ffcc0000"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="5dp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#5bcdfd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Адрес"
            android:id="@+id/tvAddress"
            android:textColor="#ff99cc00"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contentOnLine"
            android:id="@+id/tvOnLine"
            android:layout_marginTop="10dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#5bcdfd" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff99cc00"
            android:text="SectorInfo"
            android:id="@+id/tvSectorInfo"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contentbodyonline"
            android:id="@+id/tvBodyOnLine"
            android:layout_marginTop="10dp" />
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <View android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilot"
                android:id="@+id/btnPilot"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/strut" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="В сектор"
                android:id="@+id/btnToSector"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/strut"
                android:visibility="visible"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Из сектора"
                android:id="@+id/btnFromSector"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/strut"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOnPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contentAssign"
            android:id="@+id/tvOnPlace"
            android:layout_marginTop="10dp" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:id="@+id/btnCall" />
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnOnPlace"
                android:id="@+id/btnOnPlace"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="visible" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnOnRoad"
                android:id="@+id/btnOnRoad"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="gone" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnComplete"
                android:id="@+id/btnComplete"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
